# c-bigint

./: CMakeLists.txt  README.md  integer-inline.c  integer-parsing.c  integer-util.c  integer.c  integer.h  main.c  util.c  util.h
include/: _integer-inlines.h  _integer-math.h  integer.h  util.h
src/: integer-base.c  integer-math.c  integer-util.c  main.c  util.c
test/: testAddition.py
testing/: add-indirect.c  add-indirect.s  add-normal.c  add-normal.s  test.c
